# Projet-Algo-L2

./: CMakeLists.txt  files.c  files.h  function.c  function.h  main.c  node.h  tree.h
conjugated forms/: conjugated_form.c  conjugated_form.h  form_cell.c  form_cell.h  form_list.c  form_list.h
misc/: menu.c  menu.h  model.c  model.h  str.c  str.h
std_list/: cell.c  cell.h  char_cell.c  char_cell.h  char_list.c  char_list.h  list.c  list.h  str_cell.c  str_cell.h  str_list.c  str_list.h
std_tree/: node.c  node.h  str.c  tree.c  tree.h
